--- a/002-Control-Flow/Control Flow - Workshop.ipynb
+++ b/002-Control-Flow/Control Flow - Workshop.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Flow - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMLcH8dh3w379MiyBpLJJv7",
+      "authorship_tag": "ABX9TyPTml4yWJmXfYB5Poa19283",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,163 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "jPoCK1AfObtr",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 1. Truth (or Consequences)\n",
+        "\n",
+        "Read all of the following Python expressions and decide if they evaluate to `True`, `False`, not a `bool` or if they trigger an error.\n",
+        "\n",
+        "> To check a checkbox, double-click on the text cell to edit it, and add an `x` inside the brackets, like `[x]`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hKXNKXlUOzQ9",
+        "colab_type": "text"
+      },
+      "source": [
+        "`1 == 1`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "LrrQX5qzPF6r"
+      },
+      "source": [
+        "`12 < (6 // 2)`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "fxo6cq4DPUVw"
+      },
+      "source": [
+        "`12 <= (6 // 2)`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "b2G3FpXGPXfg"
+      },
+      "source": [
+        "`'h' != 'H'`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "BWbd3ZB2PgC7"
+      },
+      "source": [
+        "`'abc == 123'`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "sc42hKZUPowH"
+      },
+      "source": [
+        "```python\n",
+        "a = 'Hello World!'\n",
+        "a is 'Hello World!`\n",
+        "```\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "1rxAF-8gP1yC"
+      },
+      "source": [
+        "`'e' in 'Hello' and 'h' in 'Hello'`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "vlwHj3BaQL3z"
+      },
+      "source": [
+        "`True or True or False or True and False or False`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "71B9pn44Qa6i"
+      },
+      "source": [
+        "`a = 1`\n",
+        "\n",
+        "- [ ] `True`\n",
+        "- [ ] `False`\n",
+        "- [ ] not a `bool`\n",
+        "- [ ] error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "gSLJQBHULPUj",
         "colab_type": "text"
       },
       "source": [
-        "## 1. Fibonacci II : The Iterating\n",
+        "## 2. Fibonacci II : The Iterating\n",
         "\n",
         "Let's revisit the Fibonacci numbers generator we did [last time](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Workshop.ipynb), but let's make it much more interesting.\n",
         "\n",
@@ -67,7 +219,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2. Mocking SpongeBob text generator\n",
+        "## 3. Mocking SpongeBob text generator\n",
         "\n",
         "Write a program that asks a user to say something then repeats it to them in a mocking fashion, by alternating uppercase and lowercase letters.\n",
         "\n",
@@ -97,6 +249,46 @@
         "> ```\n",
         "aaaaa\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "axxAIFYKMnI0",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 4. FizzBuzz\n",
+        "\n",
+        "FizzBuzz is a classroom game to help children learn about numbers and multiples. The rules are as follows:\n",
+        "\n",
+        "* Count number up starting from 1\n",
+        "* If the number is a multiple of 3, say \"Fizz\"\n",
+        "* If the number ends with a 3, say \"Buzz\"\n",
+        "* If the number is a multiple of 3 and ends with 3, say \"FizzBuzz\"\n",
+        "* Otherwise, just say the number\n",
+        "\n",
+        "This should be the output of FizzBuzz up to 15:\n",
+        "\n",
+        "```\n",
+        "1\n",
+        "2\n",
+        "FizzBuzz\n",
+        "4\n",
+        "5\n",
+        "Fizz\n",
+        "7\n",
+        "8\n",
+        "Fizz\n",
+        "10\n",
+        "11\n",
+        "Fizz\n",
+        "Buzz\n",
+        "14\n",
+        "Fizz\n",
+        "```\n",
+        "\n",
+        "> **NOTE:** This is actually a very common coding exercise, often used as a preliminary test when hiring candidates. If you can master FizzBuzz, congratulations: you could apply for a developer position and wouldn't get rejected on the spot!"
       ]
     }
   ]
