--- a/002-Control-Flow/Control Flow - Workshop.ipynb
+++ b/002-Control-Flow/Control Flow - Workshop.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Flow - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPTml4yWJmXfYB5Poa19283",
+      "authorship_tag": "ABX9TyOF1zCw60y/UxpQHYpbut3t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,15 +252,79 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nYlqSnJvSBe6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "s = ''\n",
+        "\n",
+        "# Your code goes here...\n",
+        "\n",
+        "print(s)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "80PifHl8R0s1",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 4. Zip and zlide\n",
+        "\n",
+        "We received, from a weather station, a list of temperatures and a list of times at which they were taken. Unfortunately, we received this in 2 separate lists, and we need to process a list of (time, temperature) pairs.\n",
+        "\n",
+        "Write a program that takes both lists `timestamp` and `temp`, and stores them as a list of pairs `data`. A \"pair\" is just a 2-item list with the timestamp in the first position and the temperature in the second.\n",
+        "\n",
+        "The format of the result should be like this:\n",
+        "\n",
+        "```\n",
+        "[['2020-04-12T23:34:18.657', 16.0],\n",
+        " ['2020-04-12T23:35:18.564', 16.06],\n",
+        "...\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W5447pxcRz9k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "timestamp = ['2020-04-12T23:34:18.657',\n",
+        " '2020-04-12T23:35:18.564',\n",
+        " '2020-04-12T23:36:18.993',\n",
+        " '2020-04-12T23:37:18.196',\n",
+        " '2020-04-12T23:38:18.818',\n",
+        " '2020-04-12T23:39:18.888',\n",
+        " '2020-04-12T23:40:18.713',\n",
+        " '2020-04-12T23:41:18.905',\n",
+        " '2020-04-12T23:42:19.035',\n",
+        " '2020-04-12T23:43:18.504']\n",
+        "temperature = [16.0, 16.06, 16.3, 16.51, 16.39, 16.12, 16.76, 16.41, 16.3, 17.19]\n",
+        "\n",
+        "# Yourt code goes here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "axxAIFYKMnI0",
         "colab_type": "text"
       },
       "source": [
-        "## 4. FizzBuzz\n",
+        "## 5. FizzBuzz\n",
         "\n",
-        "FizzBuzz is a classroom game to help children learn about numbers and multiples. The rules are as follows:\n",
+        "FizzBuzz is a classroom game to help children learn about numbers and multiplication. The rules are as follows:\n",
         "\n",
         "* Count number up starting from 1\n",
         "* If the number is a multiple of 3, say \"Fizz\"\n",
