--- a/002-Control-Flow/Control Flow - Workshop.ipynb
+++ b/002-Control-Flow/Control Flow - Workshop.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Flow - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOF1zCw60y/UxpQHYpbut3t",
+      "authorship_tag": "ABX9TyMVoypa0Ehd1hxhJ4k0Sglj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,7 +287,13 @@
         "[['2020-04-12T23:34:18.657', 16.0],\n",
         " ['2020-04-12T23:35:18.564', 16.06],\n",
         "...\n",
-        "```"
+        "```\n",
+        "\n",
+        "> **NOTE:** Use the same technique as above to create a new list.\n",
+        "> ```python\n",
+        "data = []\n",
+        "data += ...\n",
+        "```\n"
       ]
     },
     {
@@ -310,7 +316,7 @@
         " '2020-04-12T23:43:18.504']\n",
         "temperature = [16.0, 16.06, 16.3, 16.51, 16.39, 16.12, 16.76, 16.41, 16.3, 17.19]\n",
         "\n",
-        "# Yourt code goes here..."
+        "# Your code goes here..."
       ],
       "execution_count": 0,
       "outputs": []
