--- a/002-Control-Flow/Control Flow - Workshop.ipynb
+++ b/002-Control-Flow/Control Flow - Workshop.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Flow - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMVoypa0Ehd1hxhJ4k0Sglj",
+      "authorship_tag": "ABX9TyMxcLxg17g6wGLJ6xJZRQ9L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,6 +360,88 @@
         "\n",
         "> **NOTE:** This is actually a very common coding exercise, often used as a preliminary test when hiring candidates. If you can master FizzBuzz, congratulations: you could apply for a developer position and wouldn't get rejected on the spot!"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5ZbUDz4m5sKP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 6. ROT13 Encryption\n",
+        "\n",
+        "In this exercise, you will implement an encryption algorithm, and its decryption counterpart.\n",
+        "\n",
+        "The algorithm encrypts a string by replacing each character with the character 13 places further in the alphabet, looping back to the start if necessary.\n",
+        "\n",
+        "Here is the encryption table for each character:\n",
+        "\n",
+        "| plaintext character | encrypted character |\n",
+        "|-|-|\n",
+        "|a|n|\n",
+        "|b|o|\n",
+        "|c|p|\n",
+        "|d|q|\n",
+        "|e|r|\n",
+        "|f|s|\n",
+        "|g|t|\n",
+        "|h|u|\n",
+        "|i|v|\n",
+        "|j|w|\n",
+        "|k|x|\n",
+        "|l|y|\n",
+        "|m|z|\n",
+        "|n|a|\n",
+        "|o|b|\n",
+        "|p|c|\n",
+        "|q|d|\n",
+        "|r|e|\n",
+        "|s|f|\n",
+        "|t|g|\n",
+        "|u|h|\n",
+        "|v|i|\n",
+        "|w|j|\n",
+        "|x|k|\n",
+        "|y|l|\n",
+        "|z|m|\n",
+        "\n",
+        "If the character in not a lowercase letter, do not encrypt it. Example: `!` encrypts to `!`.\n",
+        "\n",
+        "The first code block should read from a `plaintext` string and output the corresponding ciphertext.\n",
+        "\n",
+        "The second code block should read from a `ciphertext` string and output the corresponding deciphered plaintext.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TNhgj2yd5r10",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plaintext = 'the sky above the port was the color of television, tuned to a dead channel.'\n",
+        "\n",
+        "# Your code goes here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CMCK-5_257FO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "ciphertext = 'vg jnf n qnex naq fgbezl avtug.'\n",
+        "\n",
+        "# Your code goes here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
