--- a/002-Control-Flow/Control Flow - Workshop.ipynb
+++ b/002-Control-Flow/Control Flow - Workshop.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Flow - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMxcLxg17g6wGLJ6xJZRQ9L",
+      "authorship_tag": "ABX9TyN4TEitMDriaB+lneQ4wi+o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +292,7 @@
         "> **NOTE:** Use the same technique as above to create a new list.\n",
         "> ```python\n",
         "data = []\n",
-        "data += ...\n",
+        "data += [...\n",
         "```\n"
       ]
     },
