restore previous demo

--- a/002-Control-Flow/Control Flow - Chap 04-05 - Demo.ipynb
+++ b/002-Control-Flow/Control Flow - Chap 04-05 - Demo.ipynb
@@ -3,10 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Control Flow - Chap 04-05 - Exercises",
+      "name": "Control Flow - Chap 04-05 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNPwe4Fu9qO2WdkFG0XK1Fm",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOXtBfbOgq8DDmYPusa/4Lc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,36 +29,77 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K0QgyYhusb4U",
+        "id": "4kzMuFeMGkXv",
         "colab_type": "text"
       },
       "source": [
-        "## 1.\n",
-        "\n",
-        "Add all the numbers in the list `sizes` from left to right until you go over the `limit`. Print the sum you reached. Use a `while` loop to check for your exit condition.\n",
-        "\n",
-        "Example:\n",
-        "\n",
-        "```python\n",
-        "limit = 40\n",
-        "sizes = [1, 3, 33, 12, 9, 41, 22]\n",
-        "```\n",
-        "\n",
-        "should output `49` (`1 + 3 + 33 + 12`)."
+        "## Looping with `while`"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zia1OCk2sUFw",
+        "id": "05hVXxLLGjzI",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "limit = 3300\n",
-        "sizes = [851,431,901,486,536,978,214,101,404,557,548,1000,17,654,881,893,486,514,741,63]\n",
+        "answer = None\n",
         "\n",
-        "# Your code goes here..."
+        "while answer != 'y' and answer != 'n':\n",
+        "    answer = input('Are you sure? (y/n) ')\n",
+        "\n",
+        "print(answer)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WsrWCvlEGyHt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "l = [3, 2, 4, 5, 4, 1]\n",
+        "i = 0\n",
+        "\n",
+        "while l[i] != i:\n",
+        "  print(f'l[{i}] = {l[i]}')\n",
+        "  i = l[i]\n",
+        "\n",
+        "print(f'l[{i}] is a dead end')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uKFPRJGOHj-o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "i = 0\n",
+        "while i < 10:\n",
+        "  print(i)\n",
+        "  i += 1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SxYgqBUfIcHO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "while True:\n",
+        "  print('Hello World!')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -65,48 +107,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "14tWcHi8v1X_",
+        "id": "MEVIrG-qIF-6",
         "colab_type": "text"
       },
       "source": [
-        "## 2.\n",
-        "\n",
-        "The list `wait_times` contains a list of seconds to wait. Write a program that reads a number from the list, then `sleep`s for that amount of time.\n",
-        "\n",
-        "Since we do not want to wait too long, we won't sleep for any time longer than 1 second. If the wait time is longer than one second, skip straight to the next wait time.\n",
-        "\n",
-        "Your program should announce what action it decides to take.\n",
-        "\n",
-        "Example:\n",
-        "\n",
-        "```\n",
-        "Waiting for 0.395 seconds...\n",
-        "Waiting for 0.596 seconds...\n",
-        "10.0 seconds is too long! Ain't nobody got time for that!\n",
-        "Waiting for 0.789 seconds...\n",
-        "```\n",
-        "\n",
-        "Try to use the `continue` keyword since this is what we're working on.\n",
-        "\n",
-        "> **NOTE:** if your program starts sleeping for a very long time, remember you can stop it with the stop button on the left side of the block."
+        "## `break`/`continue`"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tDOpHbeIv9ee",
+        "id": "meGS4Jo_II7W",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Another import from the standard library. The sleep function lets your program\n",
-        "# pause for an arbitrary numer of seconds. For example, sleep(1.0) stops for 1\n",
-        "# second before \n",
-        "from time import sleep\n",
+        "import math\n",
         "\n",
-        "print(\"Going to sleep...\")\n",
-        "sleep(5.0)\n",
-        "print(\"I slept for 5 seconds!\")"
+        "for n in [0, 1, 2, -1, 41]:\n",
+        "    # if n < 0:\n",
+        "    #     print(f'invalid value: {n}')\n",
+        "    #     break\n",
+        "    print(math.sqrt(n))\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -114,14 +136,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kBqsaDwNwiz4",
+        "id": "e0e4tDx0OB2J",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "wait_times = [0.149, 0.624, 1.165, 0.128, 0.967, 1e6, 0.041, 12.536, 0.961, 0.591]\n",
+        "for n in [0, 1, 2, -1, 41]:\n",
+        "    if n < 0:\n",
+        "        print(f'invalid value: {n}')\n",
+        "        continue\n",
+        "    print(math.sqrt(n))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2vxA9F8vNdny",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# random() returns a random float between 0.0 and 1.0\n",
+        "from random import random\n",
         "\n",
-        "# Your code goes here..."
+        "while True:\n",
+        "  r = random()\n",
+        "  if r < 0.25:\n",
+        "    break\n",
+        "  print(r)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -129,46 +173,142 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FMaDcAZa0_sy",
+        "id": "gmEVB34ePRMW",
         "colab_type": "text"
       },
       "source": [
-        "## 3.\n",
-        "\n",
-        "Write a 2-line program, using `zip` and `enumerate` that reads each character from 2 strings `a` and `b` and outputs a line containing the index `i`, the `i`th character of `a`, the `i`th character or `b`.\n",
-        "\n",
-        "Example:\n",
-        "\n",
-        "```python\n",
-        "a = 'Hello'\n",
-        "b = 'World'\n",
-        "```\n",
-        "\n",
-        "Output:\n",
-        "\n",
-        "```\n",
-        "0 H W\n",
-        "1 e o\n",
-        "2 l r\n",
-        "3 l l\n",
-        "4 o d\n",
-        "```\n",
-        "\n",
-        "The program should stop when the shortest string is exhausted."
+        "## Python power tools"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "68cC3fVg1_Nu",
+        "id": "sSck21iQPQtY",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "a = 'Whether I shall turn out to be the hero of my own life, or whether that station will be held by anybody else, these pages must show.'\n",
-        "b = 'It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the spring of hope, it was the winter of despair.'\n",
+        "for n in range(10):\n",
+        "  if (n % 2) != 0:\n",
+        "    break\n",
+        "else:\n",
+        "  print('All numbers in range are even')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wif_BoGPUTb0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "all_even = True\n",
+        "for n in range(10 ** 8):\n",
+        "  if (n % 2) != 0:\n",
+        "    all_even = False\n",
         "\n",
-        "# Your code goes here..."
+        "if all_even:\n",
+        "  print('All numbers in range are even')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CKOExQl7Vsxp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "l = [3, 31, 4, 5, 4, 1]\n",
+        "i = 0\n",
+        "\n",
+        "while l[i] != i:\n",
+        "  if l[i] > len(l):\n",
+        "    print('Out of bounds!')\n",
+        "    break\n",
+        "  print(f'l[{i}] = {l[i]}')\n",
+        "  i = l[i]\n",
+        "else:\n",
+        "  print(f'l[{i}] is a dead end')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uYY3BkEKWWFJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i, j in zip(range(10), range(10, 0, -1)):\n",
+        "  print(i, j)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C7IeL_ZPWbfF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "s = 'abcdefghij'\n",
+        "for i, j, k in zip(range(10), range(0, 20, 2), s):\n",
+        "  print(i, j, k)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UXDNVmk8Wt0A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i, j in zip(range(10), range(20)):\n",
+        "  print(i, j)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l6Y-rgKvW6KY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "vowels = 'aeiou'\n",
+        "opening_line = \"It was a bright cold day in April, and the clocks were striking thirteen.\"\n",
+        "for i, c in enumerate(opening_line):\n",
+        "  if c in vowels:\n",
+        "    print(f'Vowel {c} at index {i}')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Go7p4e5bXT93",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in range(10):\n",
+        "  print((i//2) if ((i % 2) == 0) else 'odd')"
       ],
       "execution_count": 0,
       "outputs": []
