--- a/002-Control-Flow/Control Flow - Chap 04-05 - Demo.ipynb
+++ b/002-Control-Flow/Control Flow - Chap 04-05 - Demo.ipynb
@@ -7,7 +7,6 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXtBfbOgq8DDmYPusa/4Lc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,6 +308,23 @@
       "source": [
         "for i in range(10):\n",
         "  print((i//2) if ((i % 2) == 0) else 'odd')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q-dLnPqbxKBj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = [0, 1, 2]\n",
+        "b = [10, 11, 12]\n",
+        "\n",
+        "z = zip(a, b)\n",
+        "type(z)"
       ],
       "execution_count": 0,
       "outputs": []
