--- a/003-Data-Structures/Data Structures - Chap 02 - Demo.ipynb
+++ b/003-Data-Structures/Data Structures - Chap 02 - Demo.ipynb
@@ -6,6 +6,7 @@
       "name": "Data Structures - Chap 02 - Demo",
       "provenance": [],
       "private_outputs": true,
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyNv1akeyTXKH7GrLn8U34QS",
       "include_colab_link": true
     },
