--- a/002-Control-Flow/Control Flow - Chap 01 - Exercises.ipynb
+++ b/002-Control-Flow/Control Flow - Chap 01 - Exercises.ipynb
@@ -6,7 +6,6 @@
       "name": "Control Flow - Chap 01 - Exercises",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOM10kEcpH/vagaoYj7nzjG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,7 +186,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* Is b equal to a?"
+        "* Is `b` equal to `a`?"
       ]
     },
     {
@@ -256,7 +255,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* Is a equal to `2018 + b`?"
+        "* Is `a` equal to `2018 + b`?"
       ]
     },
     {
@@ -279,7 +278,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* Is a the same object as `2018 + b`?"
+        "* Is `a` the same object as `2018 + b`?"
       ]
     }
   ]
