--- a/003-Data-Structures/Data Structures - Chap 02 - Demo.ipynb
+++ b/003-Data-Structures/Data Structures - Chap 02 - Demo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNENmfF339JpoQhZVTtdcdV",
+      "authorship_tag": "ABX9TyN7ZGNJoFBl67sIwRZuflZY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -528,14 +528,24 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "D3SQNLAMXNj2",
-        "colab_type": "text"
+        "id": "R4DEjG6feeQk",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
-        "## `dict`"
-      ]
+        "languages = {'Python', 'C', 'Go'}\n",
+        "\n",
+        "s = languages.copy()\n",
+        "\n",
+        "print(s is languages)\n",
+        "s &= sneks\n",
+        "print(s)\n",
+        "print(languages)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
