--- a/003-Data-Structures/Data Structures - Chap 02 - Demo.ipynb
+++ b/003-Data-Structures/Data Structures - Chap 02 - Demo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7ZGNJoFBl67sIwRZuflZY",
+      "authorship_tag": "ABX9TyPXjYEu9SzCesYZ9U/uPCfj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -543,6 +543,20 @@
         "s &= sneks\n",
         "print(s)\n",
         "print(languages)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tAGACQtQ5Vvi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "s = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+        "{0, 1} <= s"
       ],
       "execution_count": 0,
       "outputs": []
