--- a/003-Data-Structures/Data Structures - Chap 03-04 - Exercises.ipynb
+++ b/003-Data-Structures/Data Structures - Chap 03-04 - Exercises.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Data Structures - Chap 02 - Exercises",
+      "name": "Data Structures - Chap 03-04 - Exercises",
       "provenance": [],
       "private_outputs": true,
+      "authorship_tag": "ABX9TyNdPWCFBLbuZCHyiYFBAgwd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ebx9Bm4bs5Ql",
+        "id": "2muLNzYvtdS0",
         "colab_type": "text"
       },
       "source": [
@@ -37,7 +38,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "29r7Tkrvs1Da",
+        "id": "1ByR5EiRtaCf",
         "colab_type": "code",
         "colab": {}
       },
