--- a/003-Data-Structures/Data Structures - Chap 03-04 - Exercises.ipynb
+++ b/003-Data-Structures/Data Structures - Chap 03-04 - Exercises.ipynb
@@ -6,7 +6,7 @@
       "name": "Data Structures - Chap 03-04 - Exercises",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPORMn14i1S1aWaxGjvaIcr",
+      "authorship_tag": "ABX9TyOIaVCEVwlcOrqZcAJrZLl8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,24 @@
         "colab_type": "text"
       },
       "source": [
-        "## 1."
+        "## 1.\n",
+        "\n",
+        "Recall [this exercise](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/002-Control-Flow/Control%20Flow%20-%20Chap%2002%20-%20Exercises.ipynb#scrollTo=Gb-3h2Pg3eLv) from Session 02.\n",
+        "\n",
+        "> Write a program that asks the user for an integer between 0 and 9 inclusive, then writes out the name of the digit in letters. If the number is not in the specified range, output an error message.\n",
+        ">\n",
+        "> Example:\n",
+        "> \n",
+        "> ```\n",
+        "Enter an integer between 0 and 9: 4\n",
+        "four\n",
+        "Enter an integer between 0 and 9: 24\n",
+        "Sorry, number too large.\n",
+        "```\n",
+        "\n",
+        "If you followed the rules back then, you probably wrote a lot of `if`s and `elif`s.\n",
+        "\n",
+        "Write it againt this time, but use a `dict` to make the program simpler to read."
       ]
     },
     {
@@ -44,6 +61,85 @@
       },
       "source": [
         ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XgCqKTdETUp5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2.\n",
+        "\n",
+        "The dictionary `d` associates a number to a timestamp. Unfortunately, many numbers are missing, and have been replaced by `None`.\n",
+        "\n",
+        "Write a program that cleans up the dictionary `d` by removing all the entries where the value is equal to `None`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zIYUaz_fT9nL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "d = {'2020-04-15T21:28:43.726901': 40,\n",
+        " '2020-04-15T21:29:44.076766': None,\n",
+        " '2020-04-15T21:30:47.671041': 38,\n",
+        " '2020-04-15T21:31:47.529658': 38,\n",
+        " '2020-04-15T21:32:49.271367': None,\n",
+        " '2020-04-15T21:33:53.334947': 30,\n",
+        " '2020-04-15T21:34:49.727452': 13,\n",
+        " '2020-04-15T21:35:57.074871': None,\n",
+        " '2020-04-15T21:36:47.075417': 21,\n",
+        " '2020-04-15T21:37:49.628085': 39,\n",
+        " '2020-04-15T21:38:57.962192': 27,\n",
+        " '2020-04-15T21:39:50.709997': 15,\n",
+        " '2020-04-15T21:40:44.667422': None,\n",
+        " '2020-04-15T21:41:43.897262': None,\n",
+        " '2020-04-15T21:43:10.929421': 37,\n",
+        " '2020-04-15T21:44:12.550511': 41,\n",
+        " '2020-04-15T21:45:08.681874': 30,\n",
+        " '2020-04-15T21:45:50.489614': 44,\n",
+        " '2020-04-15T21:46:47.418298': None,\n",
+        " '2020-04-15T21:47:50.115955': 46}\n",
+        "\n",
+        " # Your code starts here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XvQXipSFVK0v",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 3.\n",
+        "\n",
+        "Recall [this exercise](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Workshop.ipynb#scrollTo=XkJEFmXNtKad) from Session 01.\n",
+        "\n",
+        "> The following string is an encoded message. Each character in the message has been replaced by its 2-digit hexadecimal character number.\n",
+        ">\n",
+        "> $'A' \\equiv 65_{decimal} \\equiv 41_{hex}$\n",
+        "\n",
+        "The code seemed repetitive back then. Rewrite it using `join` and a list comprehension to decode `hex_string` in just one line!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qVvU-_p_VKOi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "hex_string = '47726561742053636f747421'"
       ],
       "execution_count": 0,
       "outputs": []
